<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left|center_vertical"
    android:padding="10dp" 
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/_busNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/col_bus_yellow"
        android:gravity="center"
        android:text="@string/str_bus_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:width="100dp" />

    <TextView
        android:id="@+id/_busTerminalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:text="@string/str_bus_terminal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/_busTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:paddingLeft="10dp"
        android:text="@string/str_bus_time"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</LinearLayout>
