<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <include
            layout="@layout/dialog_title"
            android:padding="5dp" />
    </LinearLayout>

    <View
        android:id="@+id/_mrtView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/col_ubike_red" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/_ubikeDistrictTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ubike_district"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/_ubikeAddressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/str_ubike_address"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/_ubikeStateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ubike_state"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/_ubikeStatusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ubike_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/_uBikeVehicleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/col_ubike_red"
                android:padding="3dp"
                android:text="@string/str_ubike_vehicles"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/_uBikeVehicleAmountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/str_ubike_amount"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/_uBikeParkTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/col_ubike_red"
                android:padding="3dp"
                android:text="@string/str_ubike_parking"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/_uBikeParkingAmoutnTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/str_ubike_amount"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:id="@+id/_ubikeUpdateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ubike_update_time"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/_ubikeUpdateTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_ubike_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/_ubikeHintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="10dp"
        android:text="@string/str_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</LinearLayout>