<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <include
            layout="@layout/dialog_title"
            android:padding="5dp" />

    </LinearLayout>

    <View
        android:id="@+id/_mrtView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:background="@color/col_mrt_green" />
    
    <TextView
        android:id="@+id/_mrtTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/_mrtView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:text="@string/str_mrt_ticketSearch"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/_mrtTitleTextView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp" >

            <TextView
                android:id="@+id/_mrtStartTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/col_mrt_green"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:text="@string/str_mrt_start"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/_mrtStartSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/_mrtDestinationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/col_mrt_green"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:text="@string/str_mrt_destination"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/_mrtDestinationSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/_mrtSearchButton"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_search" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/_mrtSearchButton"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/_mrtTicketTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mrt_ticket"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/_mrtTicketCostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mrt_cost"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/_mrtCardTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mrt_card"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/_mrtCardCostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mrt_cost"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/_mrtOtherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mrt_other"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/_mrtOtherCostTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_mrt_cost"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>