<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <include
            layout="@layout/dialog_title"
            android:padding="5dp" />
    </LinearLayout>

    <View
        android:id="@+id/_traView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@color/col_tra_blue" />

    <TextView
        android:id="@+id/_traHintTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="1dp"
        android:text="@string/str_hint"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/_traNorthBoundLinebutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_NorthBoundLinebutton" />

        <Button
            android:id="@+id/_traSouthBoundLineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_SouthBoundLinebutton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <include
            layout="@layout/tra_list_title"
            android:padding="5dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/_traListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="true"
        android:headerDividersEnabled="false" >
    </ListView>

</LinearLayout>