<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <include
            layout="@layout/dialog_title"
            android:padding="5dp" />
    </LinearLayout>
    
    <View
        android:id="@+id/_settingsView"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_below="@id/linearLayout1"
        android:background="@color/col_other_purple" />

    <CheckBox
        android:id="@+id/settings_defaultCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/_settingsView"
        android:layout_alignParentRight="true"
        android:layout_gravity="right"
        android:checked="true"
        android:gravity="center_vertical"
        android:padding="10dp"
        android:text="@string/str_settings_defalt"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/settings_busTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_bus"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/settings_busMeterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings_meter"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/settings_busSeekBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/settings_ubikeTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_ubike"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/settings_ubikeMeterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings_meter"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/settings_ubikeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/settings_mrtTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_mrt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/settings_mrtMeterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings_meter"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/settings_mrtSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="5dp" >

            <TextView
                android:id="@+id/settings_traTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/str_tra"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/settings_traMeterTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_settings_meter"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/settings_traSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/settings_HelpButton"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/help" />

</RelativeLayout>
